--- a/Generics/Provider/Provider.fsproj
+++ b/Generics/Provider/Provider.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -40,6 +40,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="Generics">
+      <HintPath>../Core/bin/Debug/Generics.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="provider.fs" />
@@ -47,7 +50,7 @@
     <Compile Include="ProvidedTypes-head.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\generics.fsproj">
+    <ProjectReference Include="..\Core\generics.fsproj">
       <Name>generics</Name>
       <Project>{116cc2f9-f987-4b3d-915a-34cac04a73da}</Project>
       <Private>True</Private>
