Moved uniplate section forward.

--- a/WGP/Makefile
+++ b/WGP/Makefile
@@ -4,3 +4,10 @@ default:
 
 clean:
 	rm -rf *.bbl *.pdf *.ptb *.log *.aux fsharp-generics.tex
+
+final:
+	lhs2TeX --poly fsharp-generics.lhs > fsharp-generics.tex
+	pdflatex fsharp-generics.tex
+	bibtex fsharp-generics
+	pdflatex fsharp-generics.tex
+	pdflatex fsharp-generics.tex
